test/1.2/errors/T_EIFTYPE.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

typedef int strange_interface_t;

connect c {
    /// ERROR EIFTYPE
    interface nonexistent;
}

port p {
    /// ERROR EIFTYPE
    implement strange;
}
